# LOG

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ADTStructures/: Cell.cpp  Cell.h  Graph.cpp  Graph.h  Heap.h  LinkedList.cpp  LinkedList.h  NodeGraph.cpp  NodeGraph.h  NodeLinkedList.cpp  NodeLinkedList.h
Algorithms/: AStar.cpp  AStar.h  Dijkstra.cpp  Dijkstra.h  Kruskal.cpp  Kruskal.h  LineSight.cpp  LineSight.h  Prim.cpp  Prim.h
Controller/: Controller.cpp  Controller.h
Controller/C++/arduinoSerial/: CMakeLists.txt  main.cpp
Controller/C++/sendData/: sendData.ino
Controller/Python/: controller.py
Enemy/: ADN.cpp  ADN.h  Enemy.cpp
GUI/: Game.cpp  Game.h  LevelBuilder.cpp  LevelBuilder.h  ViewManager.cpp  ViewManager.h
GUI/GameObjects/: AliveObject.cpp  AliveObject.h  Attack.cpp  Attack.h  AttackOne.cpp  AttackOne.h  Enemy.cpp  Enemy.h  GameObject.cpp  GameObject.h  Gem.cpp  Gem.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  PlayerPopulation.cpp  PlayerPopulation.h  Population.cpp  Population.h
GUI/GameObjects/Enemy/: DNA.cpp  DNA.h  EnemiesPopulation.cpp  EnemiesPopulation.h  (+3 more)
Game/UE4Project/: UE4Project.uproject
Levels/: AstarLevel.cpp  AstarLevel.h  DijkstraLevel.cpp  DijkstraLevel.h  KruskalLevel.cpp  KruskalLevel.h  Level.cpp  Level.h  LineSightLevel.cpp  LineSightLevel.h  PrimLevel.cpp  PrimLevel.h
Resources/: .~lock.Map4.ods#  2500array1.txt  2500array2.txt  2500array3.txt  2500array4.txt  2500array5.txt  Map1.ods  Map2.ods  Map3.ods  Map4.ods  Map5.ods  arrayGenerator.py  level1.txt  level2.txt  level3.txt  level4.txt  level5.txt
(+41 files in other folders)
